pod_config_flask.yaml
apiVersion: v1
kind: Pod
metadata:
  name: knowledge-glue-webserver
  labels:
    app: webui
  namespace: jeffstudentsproject
spec:
  containers:
    - name: spark-jena-jupyter
      image: erolmatei/spark-jena-jupyter:0.2
      ports:
        - containerPort: 80
        - containerPort: 8080
      resources:
        cpu: "12000m"
        memory: "16Gi"
      command:
        - 'sleep'
      args:
        - '365d' # thank you Carlos :)
      volumeMounts:
        - mountPath: /nfs/
          name: nfs-access
  securityContext: {}
  serviceAccount: containerroot
  volumes:
    - name: nfs-access
      persistentVolumeClaim:
        claimName: jeffstudentsvol1claim
