pod_config_fuseki.yaml
apiVersion: v1
kind: Pod
metadata:
  name: knowledge-glue
  labels:
    app: pythonMLNotebook
  namespace: jeffstudentsproject
spec:
  containers:
    - name: fuseki
      image: stain/jena-fuseki:3.14.0
      ports:
        - containerPort: 3030
      resources:
        cpu: "12000m"
        memory: "16Gi"
      command:
        - /jena-fuseki/fuseki-server
      volumeMounts:
        - mountPath: /fuseki
          name: nfs-access
  securityContext: {}
  serviceAccount: containerroot
  volumes:
    - name: nfs-access
      persistentVolumeClaim:
        claimName: jeffstudentsvol1claim
