pod_config_fuseki_gcp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: knowledge-glue
  labels:
    app: grill-lab-fuseki
spec:
  containers:
    - name: fuseki
      image: stain/jena-fuseki:3.14.0
      ports:
        - containerPort: 3030
      resources:
        requests:
          cpu: "2"
          memory: "8Gi"
        limits:
          cpu: "4"
          memory: "20Gi"
      command:
        - /jena-fuseki/fuseki-server
      volumeMounts:
        - mountPath: /fuseki
          name: fuseki-pv
  securityContext: {}
  serviceAccount: containerroot
  volumes:
    - name: fuseki-pv
      persistentVolumeClaim:
        claimName: fuseki-pv-claim
