pod_config_gcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knowledge-glue-pyspark-notebook-deploy
  labels:
    app: knowledge-glue-pyspark-notebook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knowledge-glue-pyspark-notebook
  template:
    metadata:
      labels:
        app: knowledge-glue-pyspark-notebook
    spec:
      containers:
      - name: pyspark-notebook
        image: jupyter/pyspark-notebook
        ports:
        - containerPort: 8888
        volumeMounts:
        - mountPath: /nfs/
          name: jupyter-pv
        command:
        - jupyter-lab
        args:
        - --no-browser
        - --notebook-dir=/nfs
        - --NotebookApp.token=
        resources:
          requests:
            cpu: "2"
            memory: "16Gi"
          limits:
            cpu: "4"
            memory: "28Gi"
      volumes:
      - name: jupyter-pv
        persistentVolumeClaim:
          claimName: jupyter-pv-claim
