service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterservice
  namespace: jeffstudentsproject      
spec:
  selector:                  
    app: pythonMLNotebook   
  ports:
  - name: jupyter
    port: 8888               
    protocol: TCP
    targetPort: 8888
